--- a/meet-emmet.html
+++ b/meet-emmet.html
@@ -45,15 +45,24 @@
     </nav>
 
     <div class="container">
-        <div class="jumbotron">
-            <h1>Learn HTML5</h1>
-            <p>The painless path to starting web design</p>
-        </div>
-        
-
-    </div><!-- /.container -->
-
-
+        <h1 class="page-title">My Friend Emmet</h1>
+        <p>Ah HTML, by now you've probably pressed the < and the > keys more than ever before. It was fun to see how quickly you could put together a basic page and start to get things laid out in a logical way. But despite all the excitement, some of you may be feeling a little bit like this.</p>
+        <img src="img/nightmare.gif" alt="This is a nightmare meme">
+        <p>Well, my friend Emmet may be able to help. He's pretty awesome! After meeting him for the first time, I felt totally releived. In fact, Emmets original name was Zen Coding and I think you'll see why!</p>
+       
+    <h2>What is Emmet</h2>
+    <p>Emmet is a snippet plugin for your text editor that will help take out the monotony of typing every single character. A snippet is an abbreviation that can be expanded into commonly used lines of code. The nice thing about emmet is that you can string together multiple snippets to quickly create an outline for your document.
+</p>
+    <p>Maybe it's easier to see what I mean instead of just imagining it in your mind. Head over to Emmet's official site and see what I mean (<a href="http://www.emmet.io">emmet.io</a>). Click the play button to see a short demo.</p>
+    <p>Awesome right? So let's go over how to install Emmet so you can start using it today! I'll show you how to install it in Brackets but there's likely a plugin for your favorite text editor too.
+</p>
+  <h3></h3>
+  <ul>
+      <li>Open Bracket's plugin manager from the right hand toolbar (the little lego brick looking one).</li>
+      <li></li>
+  </ul>
+   
+   </div> 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
