--- a/tutorials.html
+++ b/tutorials.html
@@ -33,25 +33,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Twich's Site</a>
+          <a class="navbar-brand" href="#">Twich's Site</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="tutorials.html">Tutorials</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="tutorials.html">Tutorials</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
-        <div class="jumbotron">
-            <h1>Learn HTML5</h1>
-            <p>The painless path to starting web design</p>
-        </div>
-        
+<div class="container">
+    <h1 class="page-title">Tutorials</h1>
+    <p>Be sure to check back often for new tutorials!</p>
+    <h2>Current Tutorials</h2>
+    <ul>
+        <li>
+            <a href="meet-emmet.html">My Friend Emmet</a>
+            <p>A quick intro to one of best text editor plugins to speed up your web design workflow.</p>
+        </li>
+    </ul>
+</div>
 
-    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
